# QuantEnsemble

./: .gitignore  CLAUDE.md  PREM.md  architecture.md  claude_notes.txt  deploy.md  pyproject.toml  todo.md
deploy/: Dockerfile  requirements-lambda.txt  setup.sh
src/: btc_data.py  btc_feature_selection.py  btc_model.py  btc_predict.py  btc_trade.py  btc_train.py  data_loader.py  experiment_feature_reduction.py  experiment_quick_wins.py  features.py  lambda_handler.py  multi_asset_trend.py  onchain_loader.py  strategy_ma_trend.py  train.py
